--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+*.ini text eol=crlf
+*.txt text eol=crlf
+*.htm text eol=crlf
+*.html text eol=crlf
+*.gitignore text eol=crlf
+*.gitattributes text eol=crlf
+*.gif binary
+*.ico binary
+*.jpg binary
+*.png binary
+*.exe binary
